# Subsystems

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  can-ffigen.yaml  ffigen-can.yaml  ffigen.yaml  pubspec.yaml  winbuild.bat
.github/: pubspec_overrides.yaml
.github/workflows/: analyzer.yml  dartdocs.yml
docs/: __404error.html  index.html  index.json  search.html
docs/can/: CanException-class-sidebar.html  CanException-class.html  CanMessage-class-sidebar.html  CanMessage-class.html  CanService-class-sidebar.html  CanService-class.html  CanSocket-class-sidebar.html  CanSocket-class.html  can-library-sidebar.html  can-library.html  commandCanIDs.html  dataCanIDs.html
docs/subsystems/: Abi-class-sidebar.html  Abi-class.html  AbiSpecificInteger-class-sidebar.html  AbiSpecificInteger-class.html  AbiSpecificIntegerArray-extension-sidebar.html  AbiSpecificIntegerArray.html  AbiSpecificIntegerMapping-class-sidebar.html  AbiSpecificIntegerMapping-class.html  AbiSpecificIntegerPointer-extension-sidebar.html  AbiSpecificIntegerPointer.html  Allocator-class-sidebar.html  Allocator-class.html  AllocatorAlloc-extension-sidebar.html  AllocatorAlloc.html  Array-class-sidebar.html  Array-class.html  ArrayAddress-extension-sidebar.html  ArrayAddress.html  (+255 more)
lib/: can.dart  subsystems.dart
src/: CMakeCache.txt  CMakeLists.txt  Makefile  can.cpp  can.h
src/burt_can/: Makefile  burt_can.cpp  burt_can.h  burt_can.hpp  burt_can_ffi.cpp
test/: failing_port.dart  port_fail.dart  serial_device_mock_test.dart  serial_port_fail_test.dart  subsystems_test.dart
(+471 files in other folders)
